--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,9 @@
   "overrides": [],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    },
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
