--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
     "eslint:recommended",
     "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
+    "plugin:mdx/recommended",
     "prettier" // Add this line!
   ],
   "overrides": [],
@@ -30,6 +31,7 @@
   "settings": {
     "import/resolver": {
       "typescript": {}
-    }
+    },
+    "mdx/code-blocks": true
   }
 }
