--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "@axe-core/react": "^4.7.3",
     "@storybook/addon-essentials": "^7.1.0",
     "@storybook/addon-interactions": "^7.1.0",
     "@storybook/addon-links": "^7.1.0",
@@ -48,6 +49,7 @@
     "@storybook/react": "^7.1.0",
     "@storybook/react-webpack5": "^7.1.0",
     "@storybook/testing-library": "^0.2.0",
+    "@types/jest-axe": "^3.5.5",
     "babel-plugin-named-exports-order": "^0.0.2",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
@@ -61,9 +63,11 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.12",
+    "jest": "^27.5.1",
+    "jest-axe": "^8.0.0",
+    "jest-environment-jsdom": "^29.6.1",
     "prettier": "^3.0.0",
     "prop-types": "^15.8.1",
-    "react-axe": "^3.5.4",
     "storybook": "^7.1.0",
     "typescript": "^5.1.6",
     "webpack": "^5.88.2"
