--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/node": "^20.7.1",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.8",
+    "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
@@ -67,6 +68,7 @@
     "jest": "^29.7.0",
     "jest-axe": "^8.0.0",
     "jest-environment-jsdom": "^29.7.0",
+    "msw": "^2.1.4",
     "prettier": "^3.0.3",
     "prop-types": "^15.8.1",
     "storybook": "^7.6.4",
