sec12: Mock Service Worker for Node - use msw in MainContent test

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,8 @@
   "env": {
     "browser": true,
     "es2021": true,
-    "jest": true // Add this line!
+    "jest": true, // Add this line!
+    "jest/globals": true,
   },
   "extends": [
     "react-app",
@@ -11,21 +12,33 @@
     "plugin:react/recommended",
     "plugin:mdx/recommended",
     // "plugin:@typescript-eslint/recommended",
-    "prettier",
-    "plugin:jsx-a11y/strict"
     // "standard-with-typescript"
+    "plugin:jest/recommended",
+    "plugin:jest/style",
+    "prettier",
+    "plugin:jsx-a11y/strict",
   ],
-  "overrides": [],
+  "overrides": [
+    {
+      "files": ["*.test.ts", "*.test.tsx"],
+      "plugins": ["jest"],
+      "env": {
+        "jest/globals": true,
+      },
+      "extends": ["plugin:jest/recommended"],
+      "rules": { "jest/prefer-expect-assertions": "off" },
+    },
+  ],
   // "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaFeatures": {
-      "jsx": true
+      "jsx": true,
     },
     "ecmaVersion": "latest",
     "sourceType": "module",
-    "project": "./tsconfig.json"
+    "project": "./tsconfig.json",
   },
-  "plugins": ["react", "prettier", "jsx-a11y"], // "@typescript-eslint"],
+  "plugins": ["react", "prettier", "jsx-a11y", "jest"], // "@typescript-eslint"],
   "root": true,
   "rules": {
     "react/react-in-jsx-scope": "off",
@@ -44,15 +57,21 @@
     "@typescript-eslint/explicit-function-return-type": [
       "error",
       {
-        "allowExpressions": true
-      }
+        "allowExpressions": true,
+      },
     ],
-    "testing-library/no-node-access": ["error", { "allowContainerFirstChild": true }]
+    "testing-library/no-node-access": ["error", { "allowContainerFirstChild": true }],
+    "jest/no-disabled-tests": "warn",
+    "jest/no-focused-tests": "error",
+    "jest/no-identical-title": "error",
+    "jest/prefer-to-have-length": "warn",
+    "jest/valid-expect": "error",
+    "indent": ["error", 2],
   },
   "settings": {
     "import/resolver": {
-      "typescript": {}
+      "typescript": {},
     },
-    "mdx/code-blocks": true
-  }
+    "mdx/code-blocks": true,
+  },
 }
