--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "^29.5.5",
     "@types/node": "^20.7.1",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.8",
@@ -51,12 +50,14 @@
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
+    "@types/jest": "^29.5.12",
     "@types/jest-axe": "^3.5.6",
     "babel-plugin-named-exports-order": "^0.0.2",
-    "eslint": "^8.50.0",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard-with-typescript": "^39.1.0",
     "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jest": "^27.6.3",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-mdx": "^2.2.0",
     "eslint-plugin-n": "^16.1.0",
@@ -72,8 +73,15 @@
     "prettier": "^3.0.3",
     "prop-types": "^15.8.1",
     "storybook": "^7.6.4",
-    "typescript": "^5.2.2",
+    "ts-jest": "^29.1.2",
+    "typescript": "^5.3.3",
+    "undici": "^5.28.3",
     "webpack": "^5.88.2"
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!(axios|@bundled-es-modules)/).*/"
+    ]
   },
   "overrides": {
     "react-scripts": {
